fil_actor_decoder/tests/snapshots/datacap_v17__allowance_params.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_params(A, V, frc42_dispatch::method_hash!(\"Allowance\"),\n&to_vec(&p).unwrap()).unwrap()"
---
{
  "operator": "f0300",
  "owner": "f0100"
}
