fil_actor_decoder/tests/snapshots/datacap_v17__balance_return.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_return(A, V, frc42_dispatch::method_hash!(\"Balance\"),\n&to_vec(&r).unwrap()).unwrap()"
---
"5000000000000000000"
