fil_actor_decoder/tests/snapshots/datacap_v17__burn_params.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_params(A, V, frc42_dispatch::method_hash!(\"Burn\"),\n&to_vec(&p).unwrap()).unwrap()"
---
{
  "amount": "50000000000000000000"
}
