fil_actor_decoder/tests/snapshots/datacap_v17__constructor_params.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_params(A, V, 1, &to_vec(&p).unwrap()).unwrap()"
---
"f090"
