fil_actor_decoder/tests/snapshots/datacap_v17__decrease_allowance_params.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_params(A, V, frc42_dispatch::method_hash!(\"DecreaseAllowance\"),\n&to_vec(&p).unwrap()).unwrap()"
---
{
  "decrease": "5000000000000000000",
  "operator": "f0300"
}
