fil_actor_decoder/tests/snapshots/datacap_v17__granularity_return.snap
---
source: fil_actor_decoder/tests/datacap_v17.rs
expression: "decode_return(A, V, frc42_dispatch::method_hash!(\"Granularity\"),\n&to_vec(&r).unwrap()).unwrap()"
---
1000000000000000000
